--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "This is the Api for taskhub which handles all data management and servers the frontend",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "dev": "tsc -w & nodemon ./dist/index.js"
-  },
-  "keywords": [],
-  "author": "Shiloh George",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "joi": "^17.9.1",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.1"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/mongoose": "^5.11.97",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^18.15.8",
-    "nodemon": "^2.0.22",
-    "typescript": "^5.0.2"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "This is the Api for taskhub which handles all data management and servers the frontend",
+	"main": "index.js",
+	"type": "module",
+	"scripts": {
+		"dev": "tsc -w & nodemon ./dist/index.js",
+		"start": "node ./dist/index.js"
+	},
+	"keywords": [],
+	"author": "Shiloh George",
+	"license": "ISC",
+	"dependencies": {
+		"bcrypt": "^5.1.0",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"joi": "^17.9.1",
+		"jsonwebtoken": "^9.0.0",
+		"mongoose": "^7.0.3",
+		"multer": "^1.4.5-lts.1",
+		"nodemailer": "^6.9.1"
+	},
+	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
+		"@types/cookie-parser": "^1.4.3",
+		"@types/cors": "^2.8.13",
+		"@types/express": "^4.17.17",
+		"@types/jsonwebtoken": "^9.0.1",
+		"@types/mongoose": "^5.11.97",
+		"@types/multer": "^1.4.7",
+		"@types/node": "^18.15.8",
+		"nodemon": "^2.0.22",
+		"typescript": "^5.0.2"
+	}
 }
