--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "layout",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,19 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^10.12.16",
+    "framer-motion": "^10.12.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-icons": "^4.9.0",
-    "react-router-dom": "^6.11.2",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.0",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.4.2",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
-    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
@@ -34,6 +33,6 @@
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
-    "vite-plugin-pwa": "^0.16.3"
+    "vite-plugin-pwa": "^0.16.4"
   }
 }
