--- a/public/manifest.json
+++ b/public/manifest.json
@@ -27,7 +27,7 @@
 	"protocol_handlers": [
 		{
 			"protocol": "web+animehub",
-			"url": "https://animehub-dev.netlify.app/%s"
+			"url": "http://localhost:5051/%s"
 		}
 	]
 }
