--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.4.2",
