--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"dev": "tsc -w & nodemon ./dist/index.js",
+		"compile": "tsc -w",
+		"dev": "nodemon ./dist/index.js",
 		"start": "node ./dist/index.js"
 	},
 	"keywords": [],
