--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-	"name": "AnimeHub",
-	"description": "This is AnimeHub where you can get all animes of different genres and categories.",
-	"short_name": "animehub.dev",
+	"name": "animehub",
+	"description": "animehub is your ultimate destination for renting, watching, and streaming high-quality anime content. Explore our extensive catalog of latest and hottest anime releases, discover new series, and immerse yourself in the world of captivating storytelling.",
+	"short_name": "animehub-dev",
 	"start_url": "/",
 	"display": "standalone",
 	"theme_color": "rgb(203 213 225)",
@@ -27,7 +27,7 @@
 	"protocol_handlers": [
 		{
 			"protocol": "web+animehub",
-			"url": "http://localhost:5051/%s"
+			"url": "https://animehub-dev.netlify.app/%s"
 		}
 	]
 }
