--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
 	"version": "1.0.0",
 	"description": "This is the Api for taskhub which handles all data management and servers the frontend",
 	"main": "index.js",
-	"type": "module",
 	"scripts": {
 		"compile": "tsc -w",
 		"dev": "nodemon ./dist/index.js",
@@ -30,9 +29,9 @@
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
 		"@types/jsonwebtoken": "^9.0.1",
-		"@types/mongoose": "^5.11.97",
 		"@types/multer": "^1.4.7",
 		"@types/node": "^18.15.8",
+		"envalid": "^7.3.1",
 		"nodemon": "^2.0.22",
 		"typescript": "^5.0.2"
 	}
