--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/image": "^2.1.0",
     "framer-motion": "^10.12.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
