polished api routes: user, anime

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DATABASE_URL='mongodb://127.0.0.1:27017/animehub-dev'
+# DATABASE_URL='mongodb://127.0.0.1:27017/animehub-dev'
+DATABASE_URL="mongodb+srv://shinohgeorge2019:Tsukuyomi12@cluster0.pvvgiot.mongodb.net/animehub-dev?retryWrites=true&w=majorit"
 SECRET='animehub'
