--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"bcrypt": "^5.1.1",
 		"dotenv": "^16.3.1",
 		"envalid": "^8.0.0",
 		"framer-motion": "^10.16.4",
+		"joi": "^17.11.0",
 		"mongoose": "^7.6.0",
 		"next": "13.5.4",
 		"react": "^18",
@@ -22,6 +24,7 @@
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
