--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"envalid": "^8.0.0",
 		"framer-motion": "^10.16.4",
 		"joi": "^17.11.0",
+		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^7.6.0",
 		"next": "13.5.4",
 		"react": "^18",
@@ -25,6 +26,7 @@
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
+		"@types/jsonwebtoken": "^9.0.3",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
