--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@types/cookie": "^0.5.2",
 		"bcrypt": "^5.1.1",
+		"cookie": "^0.5.0",
 		"dotenv": "^16.3.1",
 		"envalid": "^8.0.0",
 		"framer-motion": "^10.16.4",
