--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# DATABASE_URL='mongodb://127.0.0.1:27017/animehub-dev'
-DATABASE_URL="mongodb+srv://shinohgeorge2019:Tsukuyomi12@cluster0.pvvgiot.mongodb.net/animehub-dev?retryWrites=true&w=majorit"
+DATABASE_URL='mongodb://127.0.0.1:27017/animehub-dev'
+# DATABASE_URL="mongodb+srv://shinohgeorge2019:Tsukuyomi12@cluster0.pvvgiot.mongodb.net/animehub-dev?retryWrites=true&w=majorit"
 SECRET='shiloh@animehub'
 SHILOH_PASSWORD='shiloh@animehub'
 GUEST_PASSWORD='guest@animehub'
