--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"envalid": "^8.0.0",
 		"framer-motion": "^10.16.4",
 		"joi": "^17.11.0",
+		"jose": "^4.15.4",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^7.6.0",
 		"next": "13.5.4",
