--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react-helmet-async": "^1.3.0",
 		"react-icons": "^4.11.0",
 		"sonner": "^1.0.3",
+		"use-debounce": "^9.0.4",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
