--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"jose": "^4.15.4",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^7.6.0",
-		"next": "13.5.4",
+		"next": "^14.0.1",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-helmet-async": "^1.3.0",
