--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@types/cookie": "^0.5.2",
+		"@vercel/speed-insights": "^1.0.1",
 		"bcrypt": "^5.1.1",
 		"cookie": "^0.5.0",
 		"dotenv": "^16.3.1",
