--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@edgestore/react": "^0.1.6",
+		"@edgestore/server": "^0.1.6",
 		"@types/cookie": "^0.5.2",
 		"@vercel/speed-insights": "^1.0.1",
 		"bcrypt": "^5.1.1",
@@ -21,6 +23,7 @@
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^7.6.0",
 		"next": "^14.0.1",
+		"plaiceholder": "^3.0.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-helmet-async": "^1.3.0",
