--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,5 @@
 {
-  "extends": "next/core-web-vitals"
+	"extends": ["next/core-web-vitals", "plugin:react/recommended", "plugin:@next/next/recomended", "eslint:recomended"],
+	"plugins": ["react", "@next/next", "@typescript-eslint"],
+	"rules": [""]
 }
