--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"react-dom": "^18",
 		"react-helmet-async": "^1.3.0",
 		"react-icons": "^4.11.0",
+		"react-player": "^2.14.1",
 		"sonner": "^1.0.3",
 		"use-debounce": "^9.0.4",
 		"zod": "^3.22.4"
