--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@typescript-eslint/eslint-plugin": "^6.19.1",
+		"@typescript-eslint/parser": "^6.19.1",
 		"autoprefixer": "^10",
 		"eslint": "^8",
 		"eslint-config-next": "13.5.4",
